--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_1/package.json
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_1/package.json
@@ -5,7 +5,8 @@
   "main": "aws_credentials.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node deploy.js"
+    "deploy": "node deploy.js",
+    "destroy": "node destroy.js"
   },
   "keywords": [],
   "author": "",
